Search Endpoint modified, query runs by date and time
